--- a/conf/machine/freedom-u540.conf
+++ b/conf/machine/freedom-u540.conf
@@ -13,7 +13,7 @@ KERNEL_IMAGETYPE = "fitImage"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-mainline"
 
 EXTRA_IMAGEDEPENDS += "opensbi"
-RISCV_SBI_PLAT = "sifive/fu540"
+RISCV_SBI_PLAT = "sifive/fu500"
 
 ## This sets u-boot as the default OpenSBI payload
 RISCV_SBI_PAYLOAD ?= "u-boot.bin"
@@ -23,7 +23,7 @@ RISCV_SBI_PAYLOAD ?= "u-boot.bin"
 
 # RISCV_SBI_FDT ?= "hifive-unleashed-a00.dtb"
 ## Use this to add Microsemi Expansion board support
-RISCV_SBI_FDT ?=  "hifive-unleashed-a00-microsemi.dtb"
+RISCV_SBI_FDT ?=  "fu500.dtb"
 
 SERIAL_CONSOLES = "115200;ttySIF0"
 
@@ -36,10 +36,10 @@ KERNEL_DEVICETREE ?= "sifive/${RISCV_SBI_FDT}"
 WIC_CREATE_EXTRA_ARGS ?= "--no-fstab-update"
 
 EXTRA_IMAGEDEPENDS += "u-boot"
-UBOOT_MACHINE = "sifive_fu540_defconfig"
+UBOOT_MACHINE = "sifive_fu500_defconfig"
 
 UBOOT_ENTRYPOINT = "0x80200000"
-UBOOT_DTB_LOADADDRESS = "0x82200000"
+UBOOT_DTB_LOADADDRESS = "0x85000000"
 
 ## Set this to "mmc-boot" to generate a boot.scr file which should be included
 ##  in the boot partition. It will try to load a kernel image by TFTP and if that
